Añadidos thumbnails a muro vacío

--- a/src/main/java/vista/index.html
+++ b/src/main/java/vista/index.html
@@ -71,13 +71,24 @@
 		</div>
 
 		<div class="row text-center">
+
 			<div class="col-xs-6">
+
 				<h3>Sección de deportes</h3>
+        <a href="#" class="thumbnail">
+          <!-- Esta foto podremos sustituirla por una captura de un muro que tiene deportes"-->
+          <img src="imagenes/Sports.png" alt="Sports Bootstrap Theme">
+        </a>
 				<p>Añade los deportes que más te gustan, suscríbete a eventos existentes y crea tus propios eventos</p>
 				<a href="#" class="btn btn-primary">Añade deportes</a>
 			</div>
 			<div class="col-xs-6">
+
 				<h3>Sección de amigos</h3>
+        <a href="#" class="thumbnail">
+          <!-- Esta foto podremos sustituirla por una captura de un muro que tiene amigos"-->
+          <img src="imagenes/people.png" alt="people Bootstrap  Theme">
+        </a>
 				<p>Busca y sigue a tus amigos, comparte eventos e inicia conversaciones sobre el mundo del deporte</p>
 				<a href="#" class="btn btn-success">Añade amigos</a>
 			</div>
