--- a/src/main/java/vista/index.html
+++ b/src/main/java/vista/index.html
@@ -5,181 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
-
+    <title>Social sport</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-	<link rel="stylesheet" href="custom.css">
-
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+	<link rel="stylesheet" href="index.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
   <body>
-	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
-
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target =".navbar-collapse">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#">Social Sport</a>
-			</div>
-			<div class="navbar-collapse collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
-          <li><a href="#">Configuración</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Perfil<b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li class="dropdown-header">Perfil de "nombre usuario"</li>
-							<li> <a href="#">Mi perfil</a></li>
-              <li class="divider"></li>
-							<li> <a href="#deportes" data-toggle="modal">Mis deportes</a></li>
-							<li> <a href="#eventos" data-toggle="modal">Mis eventos</a></li>
-							<li> <a href="#amigos" data-toggle="modal">Mis amigos</a></li>
-              <li> <a href="#mensajes" data-toggle="modal">Mis mensajes</a></li>
-              <li class="divider"></li>
-              <li> <a href="#">Crear evento</a></li>
-              <li class="divider"></li>
-              <li> <a href="#">Cerrar sesión</a></li>
-						</ul>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-
-	<div class="container" >
-		<div class="jumbotron text-center">
-			<h1><font color=white background-color=black> Bienvenido a Social Sport </font></h1>
-			<p><font color=white> La red social que te acercará al mundo del deporte </font></p>
-		</div>
-
-		<div class="container text-center">
-			<font color="red" size="4px"> Parece que eres nuevo en la página ... </font>
-		</div>
-
-		<div class="row text-center">
-
-			<div class="col-xs-6">
-
-				<h3>Sección de deportes</h3>
-        <a href="#" class="thumbnail">
-          <!-- Esta foto podremos sustituirla por una captura de un muro que tiene deportes"-->
-          <img src="imagenes/Sports.png" alt="Sports Bootstrap Theme">
-        </a>
-				<p>Añade los deportes que más te gustan, suscríbete a eventos existentes y crea tus propios eventos</p>
-				<a href="#" class="btn btn-primary">Añade deportes</a>
-			</div>
-			<div class="col-xs-6">
-
-				<h3>Sección de amigos</h3>
-        <a href="#" class="thumbnail">
-          <!-- Esta foto podremos sustituirla por una captura de un muro que tiene amigos"-->
-          <img src="imagenes/people.png" alt="people Bootstrap  Theme">
-        </a>
-				<p>Busca y sigue a tus amigos, comparte eventos e inicia conversaciones sobre el mundo del deporte</p>
-				<a href="#" class="btn btn-success">Añade amigos</a>
-			</div>
-		</div>
-	</div>
 
 
 
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
+          <div class="masthead clearfix">
+            <div class="inner">
 
-	<div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
-		<div class="container">
-			<div class="navbar-text pull-left">
-				<p> 2014 BootstrapBay.</p>
-			</div>
-			<div class="navbar-text pull-right">
-				<a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
-				<a href="#"><i class="fa fa-twitter-square fa-2x"></i></a>
-				<a href="#"><i class="fa fa-linkedin-square fa-2x"></i></a>
-				<a href="#"><i class="fa fa-github-square fa-2x"></i></a>
-				<a href="#"><i class="fa fa-google-plus fa-2x"></i></a>
-			</div>
-		</div>
-	</div>
 
-  <div class="modal fade" id="deportes" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-            <h4> Aun no tienes deportes añadidos </h4>
+            </div>
+          </div>
+
+          <div class="inner cover">
+            <h1 class="cover-heading">Social Sport</h1>
+
+            <p class="lead">Bienvenido a Social Sport, un poderoso medio por el cual deportistas y aficionados se dan encuentro para compartir su pasión:<br>El mundo del deporte.
+
+
+            </p>
+
+            <p class="lead"><a class="btn btn-lg btn-info" href="signup.html">Iniciar</a></p>
+          </div>
+
+          <div class="mastfoot">
+            <div class="inner">
+              <!-- Validation -->
+
+              <p><a href=
+              "http://validator.w3.org/check?uri=http%3A%2F%2Fbootsnipp.com%2Fiframe%2Fg6GWQ"
+              target="_blank"><small>HTML</small><sup>5</sup></a></p>
+
+
+              <p>© 2016 Social Sport </p>
+            </div>
+          </div>
         </div>
-        <div class="modal-body">
-          <p> Primero añade deportes para poder visualizarlos </p>
-        </div>
-        <div class="modal-footer">
-          <a class="btn btn-primary" data-dismiss="modal">Close</a>
-        </div>
-      </div>
     </div>
-  </div>
-
-  <div class="modal fade" id="eventos" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-            <h4> Aun no tienes eventos añadidos </h4>
-        </div>
-        <div class="modal-body">
-          <p> Primero añade eventos para poder visualizarlos </p>
-        </div>
-        <div class="modal-footer">
-          <a class="btn btn-primary" data-dismiss="modal">Close</a>
-        </div>
-      </div>
     </div>
-  </div>
 
-  <div class="modal fade" id="amigos" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-            <h4> Aun no tienes amigos añadidos </h4>
-        </div>
-        <div class="modal-body">
-          <p> Primero añade amigos para poder visualizarlos </p>
-        </div>
-        <div class="modal-footer">
-          <a class="btn btn-primary" data-dismiss="modal">Close</a>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div class="modal fade" id="mensajes" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-            <h4> Aun no tienes mensajes </h4>
-        </div>
-        <div class="modal-body">
-          <p> Primero añade amigos para poder conversar con ellos </p>
-        </div>
-        <div class="modal-footer">
-          <a class="btn btn-primary" data-dismiss="modal">Close</a>
-        </div>
-      </div>
-    </div>
-  </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+
+
+
+
+
+
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <!--script src="js/bootstrap.min.js"></script>
   </body>
 </html>
