estructura arreglada y nuevo servlet

--- a/src/main/java/vista/muroVacio.html
+++ b/src/main/java/vista/muroVacio.html
@@ -9,7 +9,7 @@
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-	<link rel="stylesheet" href="muroVacio.css">
+	<link rel="stylesheet" href="css/muroVacio.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
   <body>
@@ -68,7 +68,7 @@
 				<h3 id="seccion">Sección de deportes</h3>
         <a href="#" class="thumbnail">
           <!-- Esta foto podremos sustituirla por una captura de un muro que tiene deportes"-->
-          <img src="imagenes/Sports.png" alt="Sports Bootstrap Theme">
+          <img src="img/Sports.png" alt="Sports Bootstrap Theme">
         </a>
 				<p>Añade los deportes que más te gustan, suscríbete a eventos existentes y crea tus propios eventos</p>
 				<a href="#añadeDeportes" class="btn btn-primary" data-toggle="modal">Añade deportes</a>
@@ -78,7 +78,7 @@
 				<h3 id="seccion">Sección de amigos</h3>
         <a href="#" class="thumbnail">
           <!-- Esta foto podremos sustituirla por una captura de un muro que tiene amigos"-->
-          <img src="imagenes/people.png" alt="people Bootstrap  Theme">
+          <img src="img/people.png" alt="people Bootstrap  Theme">
         </a>
 				<p>Busca y sigue a tus amigos, comparte eventos e inicia conversaciones sobre el mundo del deporte</p>
 				<a href="#" class="btn btn-success">Añade amigos</a>
