--- a/src/main/java/vista/signup.html
+++ b/src/main/java/vista/signup.html
@@ -6,7 +6,7 @@
     <title>Login and Register tabbed form - Bootsnipp.com</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="css/signup.css">
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="signup.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
