--- a/src/main/java/vista/login.html
+++ b/src/main/java/vista/login.html
@@ -12,10 +12,10 @@
 		</div>
 
 		<div class="container">
-			<label type="user"><b>Username / Email</b></label></br>
-			<input type="text" placeholder="Enter Username" name="uname" required></br>
-			<label type="pass"><b>Password</b></label></br>
-			<input type="password" placeholder="Enter Password" name="psw" required></br>
+			<label id="user"><b>Username / Email</b></label><br>
+			<input type="text" placeholder="Enter Username" name="uname" required><br>
+			<label id="pass"><b>Password</b></label><br>
+			<input type="password" placeholder="Enter Password" name="psw" required><br>
 			<button type="submit">Login</button>
 			<input type="checkbox" checked="checked"><b>Remember me</b>
 		</div>
