--- a/src/main/java/vista/signup.html
+++ b/src/main/java/vista/signup.html
@@ -30,7 +30,7 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-12">
-								<form id="login-form" action="usuarios" method="get" role="form" style="display: block;">
+								<form id="login-form" action="muroVacio.html" method="get" role="form" style="display: block;">
 									<div class="form-group">
 										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
 									</div>
@@ -49,7 +49,7 @@
 										</div>
 									</div>
 								</form>
-								<form id="register-form" action="usuarios" method="post" role="form" style="display: none;">
+								<form id="register-form" action="signup.html" method="post" role="form" style="display: none;">
 									<div class="form-group">
 										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
 									</div>
