--- a/src/main/java/vista/muroVacio.html
+++ b/src/main/java/vista/muroVacio.html
@@ -34,7 +34,7 @@
   						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Perfil<b class="caret"></b></a>
   						<ul class="dropdown-menu">
   							<li class="dropdown-header">Perfil de "nombre usuario"</li>
-  							<li> <a href="#">Mi perfil</a></li>
+  							<li> <a href="profile.html">Mi perfil</a></li>
                 <li class="divider"></li>
   							<li> <a href="#deportes" data-toggle="modal">Mis deportes</a></li>
   							<li> <a href="#eventos" data-toggle="modal">Mis eventos</a></li>
