--- a/src/main/java/vista/signup.html
+++ b/src/main/java/vista/signup.html
@@ -8,7 +8,7 @@
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/signup.css">
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="signup.js"></script>
+    <script src="js/signup.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 </head>
 <body background="../res/athletics.jpg">
