--- a/src/main/java/vista/muroVacio.html
+++ b/src/main/java/vista/muroVacio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Muro vacio</title>
+    <title>Muro SocialSport</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -43,7 +43,7 @@
                 <li class="divider"></li>
                 <li> <a href="#">Crear evento</a></li>
                 <li class="divider"></li>
-                <li> <a href="#">Cerrar sesión</a></li>
+                <li> <a href="signup.html">Cerrar sesión</a></li>
   						</ul>
   					</li>
   				</ul>
