--- a/WebContent/profile.html
+++ b/WebContent/profile.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.6.3/font-awesome.min.css">
     <link rel="stylesheet" href="css/profile.css">
 
     <script src="js/profile.js"></script>
@@ -14,13 +15,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <title>Perfil de Usuario</title>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
   <body>
     <section>
@@ -30,7 +24,7 @@
 
           <div class="outSesion">
             <ul class="navbar-right">
-              <li><span class="glyphicon glyphicon-home"></span> <a href="#" title="sesion">Cerrar Sección</a></li>
+              <li><span class="glyphicon glyphicon-home"></span> <a href="signup.html" title="sesion">Cerrar Sección</a></li>
             </ul>
           </div>
 
@@ -97,37 +91,37 @@
         <ul class="nav nav-tabs nav-menu" role="tablist">
           <li class="active">
             <a href="#profile" role="tab" data-toggle="tab">
-              <i class="fa fa-male"></i> Perfil
+              <i class="fa fa-home"></i> Perfil
             </a>
           </li>
           <li>
             <a href="#mySports" role="tab" data-toggle="tab">
-              <i class="fa fa-male"></i> Mis Deportes
+              <i class="fa fa-futbol-o"></i> Mis Deportes
             </a>
           </li>
           <li>
             <a href="#myEvents" role="tab" data-toggle="tab">
-              <i class="fa fa-male"></i> Mis Eventos
+              <i class="fa fa-tasks"></i> Mis Eventos
             </a>
           </li>
           <li>
             <a href="#myFriends" role="tab" data-toggle="tab">
-              <i class="fa fa-male"></i> Mis Amigos
+              <i class="fa fa-group"></i> Mis Amigos
             </a>
           </li>
           <li>
             <a href="#myMessages" role="tab" data-toggle="tab">
-              <i class="fa fa-male"></i> Mis Mensajes
+              <i class="fa fa-mail-forward"></i> Mis Mensajes
             </a>
           </li>
           <li>
             <a href="#createEvent" role="tab" data-toggle="tab">
-              <i class="fa fa-male"></i> Crear Evento
+              <i class="fa fa-calendar-plus-o"></i> Crear Evento
             </a>
           </li>
           <li>
             <a href="#change" role="tab" data-toggle="tab">
-              <i class="fa fa-key"></i> Editar Perfil
+              <i class="fa fa-edit"></i> Editar Perfil
             </a>
           </li>
         </ul><!--nav-tabs close-->
@@ -246,8 +240,8 @@
                     <div class="form-group col-md-12">
                       <label class="col-md-10 control-label" >Fecha de Nacimiento</label> 
                       <div class="col-md-12 inputGroupContainer">
-                        <div class="input-group" id="fecha">
-                          <input type="date" name="fecha">
+                        <div class="input-group input-gs">
+                          <input type="date" name="fecha" class="form-control">
                         </div>
                       </div>
                     </div>
@@ -284,7 +278,7 @@
                     <div class="form-group col-md-12"> 
                       <label class="col-md-10 control-label">Deporte Favorito</label>
                       <div class="col-md-12 selectContainer">
-                        <div class="input-group">
+                        <div class="input-group input-gs">
                           <select name="deportes" class="form-control selectpicker" >
                             <option>---</option>
                             <option>Fútbol</option>
@@ -299,7 +293,7 @@
                     <div class="form-group col-md-12"> 
                       <label class="col-md-10 control-label">Experiencia</label>
                       <div class="col-md-12 selectContainer">
-                        <div class="input-group">
+                        <div class="input-group input-gs">
                           <select name="experiencia" class="form-control selectpicker" >
                             <option>Menos de un año</option>
                             <option>1 año</option>
@@ -314,7 +308,7 @@
                     <div class="form-group col-md-12"> 
                       <label class="col-md-10 control-label">País</label>
                       <div class="col-md-12 selectContainer">
-                        <div class="input-group">
+                        <div class="input-group input-gs">
                           <select name="pais" class="form-control selectpicker" >
                             <option>Alemania</option>
                             <option>España</option>
@@ -327,7 +321,7 @@
                     <div class="form-group col-md-12"> 
                       <label class="col-md-10 control-label">Ciudad</label>
                       <div class="col-md-12 selectContainer">
-                        <div class="input-group">
+                        <div class="input-group input-gs">
                           <select name="ciudad" class="form-control selectpicker" >
                             <option>Barcelona</option>
                             <option>Madrid</option>
@@ -357,7 +351,7 @@
 
                     <!-- radio checks -->
                     <div class="form-group col-md-12">
-                      <label class="col-md-10 control-label">Genero</label>
+                      <label class="col-md-10 control-label" id="genero">Genero</label>
                       <div class="col-md-6">
                         <div class="radio col-md-2">
                           <label>
