--- a/WebContent/profile.html
+++ b/WebContent/profile.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.6.3/font-awesome.min.css">
     <link rel="stylesheet" href="css/profile.css">
 
-    <script src="js/profile.js"></script>
+    <!-- <script src="js/profile.js"></script> -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -35,9 +35,6 @@
             </li>
             <li>
               <a href="#">About</a>
-            </li>
-            <li id="configEdit">
-              <a href="#change" data-toggle="tab">Configuración</a>
             </li>
             <li class="dropdown active">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Perfil
