--- a/WebContent/login.html
+++ b/WebContent/login.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<link rel="stylesheet" href="css/login.css">
-	<meta charset="UTF-8">
-	<title>SocialSport Login</title>
+<link rel="stylesheet" href="css/login.css">
+<meta charset="UTF-8">
+<title>SocialSport Login</title>
 </head>
 <body>
 	<form action="empty.html">
 		<div class="imgcontainer">
-			<img src="img/ss.png" height="200" width="200" alt="IconSS" class="iconss">
+			<img src="img/ss.png" height="200" width="200" alt="IconSS"
+				class="iconss">
 		</div>
 
 		<div class="container">
-			<label id="user"><b>Username / Email</b></label><br>
-			<input type="text" placeholder="Enter Username" name="uname" required><br>
-			<label id="pass"><b>Password</b></label><br>
-			<input type="password" placeholder="Enter Password" name="psw" required><br>
+			<label id="user"><b>Username / Email</b></label><br> <input
+				type="text" placeholder="Enter Username" name="uname" required><br>
+			<label id="pass"><b>Password</b></label><br> <input
+				type="password" placeholder="Enter Password" name="psw" required><br>
 			<button type="submit">Login</button>
 			<input type="checkbox" checked="checked"><b>Remember me</b>
 		</div>
