--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <!-- This file has been downloaded from Bootsnipp.com. Enjoy! -->
-    <title>Login and Register SocialSport</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/signup.css">
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="js/signup.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<meta charset="utf-8">
+<!-- This file has been downloaded from Bootsnipp.com. Enjoy! -->
+<title>Login and Register SocialSport</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link
+	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css"
+	rel="stylesheet">
+<link rel="stylesheet" href="css/signup.css">
+<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="js/signup.js"></script>
+<script
+	src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 </head>
 <body background="../res/athletics.jpg">
-<div class="container">
-    	<div class="row">
+	<div class="container">
+		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 				<div class="panel panel-login">
 					<div class="panel-heading">
@@ -30,42 +33,57 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-12">
-								<form id="login-form" action="muroVacio.html" method="get" role="form" style="display: block;">
+								<form id="login-form" action="muroVacio.html" method="get"
+									role="form" style="display: block;">
 									<div class="form-group">
-										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+										<input type="text" name="username" id="username" tabindex="1"
+											class="form-control" placeholder="Username" value="">
 									</div>
 									<div class="form-group">
-										<input type="password" name="contrasena" id=""contrasena"" tabindex="2" class="form-control" placeholder="Password">
+										<input type="password" name="contrasena" id=""
+											contrasena"" tabindex="2" class="form-control"
+											placeholder="Password">
 									</div>
 									<div class="form-group text-center">
-										<input type="checkbox" tabindex="3" class="" name="remember" id="remember">
-										<label for="remember"> Remember Me</label>
+										<input type="checkbox" tabindex="3" class="" name="remember"
+											id="remember"> <label for="remember">
+											Remember Me</label>
 									</div>
 									<div class="form-group">
 										<div class="row">
 											<div class="col-sm-6 col-sm-offset-3">
-												<input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
+												<input type="submit" name="login-submit" id="login-submit"
+													tabindex="4" class="form-control btn btn-login"
+													value="Log In">
 											</div>
 										</div>
 									</div>
 								</form>
-								<form id="register-form" action="signup.html" method="post" role="form" style="display: none;">
+								<form id="register-form" action="signup.html" method="post"
+									role="form" style="display: none;">
 									<div class="form-group">
-										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+										<input type="text" name="username" id="username" tabindex="1"
+											class="form-control" placeholder="Username" value="">
 									</div>
 									<div class="form-group">
-										<input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
+										<input type="email" name="email" id="email" tabindex="1"
+											class="form-control" placeholder="Email Address" value="">
 									</div>
 									<div class="form-group">
-										<input type="password" name="contrasena" id="contrasena" tabindex="2" class="form-control" placeholder="Password">
+										<input type="password" name="contrasena" id="contrasena"
+											tabindex="2" class="form-control" placeholder="Password">
 									</div>
 									<div class="form-group">
-										<input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
+										<input type="password" name="confirm-password"
+											id="confirm-password" tabindex="2" class="form-control"
+											placeholder="Confirm Password">
 									</div>
 									<div class="form-group">
 										<div class="row">
 											<div class="col-sm-6 col-sm-offset-3">
-												<input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
+												<input type="submit" name="register-submit"
+													id="register-submit" tabindex="4"
+													class="form-control btn btn-register" value="Register Now">
 											</div>
 										</div>
 									</div>
