--- a/WebContent/profile.html
+++ b/WebContent/profile.html
@@ -245,6 +245,138 @@
             </div><!--container close-->
           </div><!--tab-pane close-->
 
+
+          <div class="tab-pane fade active in" id="createEvent">
+            <div class="container fom-main">
+              <div class="row">
+                <div class="col-sm-12">
+                  <h2 class="register">Crear Evento</h2>
+                </div><!--col-sm-12 close-->
+              </div><!--row close-->
+
+              <br />
+              <div class="row">
+                <form class="form-horizontal main_form text-left" action=" " method="post"  id="event_form">
+                  <fieldset>
+                    <div class="form-group col-md-12">
+                      <label class="col-md-10 control-label">Nombre del evento</label>  
+                      <div class="col-md-12 inputGroupContainer">
+                        <div class="input-group">
+                          <input  name="nombreEvento" placeholder="nombre del evento" class="form-control"  type="text">
+                        </div>
+                      </div>
+                    </div>
+
+                    <!-- Text input-->
+                    <div class="form-group col-md-12">
+                      <label class="col-md-10 control-label" >Ubicación</label> 
+                      <div class="col-md-12 inputGroupContainer">
+                        <div class="input-group">
+                          <input name="ubicacion" placeholder="zona, calle, centro deportivo" class="form-control"  type="text">
+                        </div>
+                      </div>
+                    </div>
+
+                     <!-- Date input-->
+                    <div class="form-group col-md-12">
+                      <label class="col-md-10 control-label" >Fecha de Evento</label> 
+                      <div class="col-md-12 inputGroupContainer">
+                        <div class="input-group input-gs">
+                          <input type="date" name="fechaE" placeholder="DD/MM/AAAA" class="form-control">
+                        </div>
+                      </div>
+                    </div>
+
+                    <!-- Text input-->
+                    <div class="form-group col-md-12">
+                      <label class="col-md-10 control-label">Número de Contacto</label>  
+                      <div class="col-md-12 inputGroupContainer">
+                        <div class="input-group">
+                          <input name="telefono" placeholder="(+34) 697 122 122" class="form-control" type="tel">
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="form-group col-md-12">
+                      <label class="col-md-10 control-label">Descripción</label>
+                      <div class="col-md-12 inputGroupContainer">
+                        <div class="input-group">
+                          <textarea class="form-control" name="descripcion" placeholder="campeonato de ....
+
+                          "></textarea>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="form-group col-md-12"> 
+                      <label class="col-md-10 control-label">Elegir Deporte</label>
+                      <div class="col-md-12 selectContainer">
+                        <div class="input-group input-gs">
+                          <select name="deportes" class="form-control selectpicker" >
+                            <option>---</option>
+                            <option>Fútbol</option>
+                            <option>Baloncesto</option>
+                            <option>Golf</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+
+                    <!-- Select Basic -->
+                    <div class="form-group col-md-12"> 
+                      <label class="col-md-10 control-label">Experiencia Requerida</label>
+                      <div class="col-md-12 selectContainer">
+                        <div class="input-group input-gs">
+                          <select name="experiencia" class="form-control selectpicker" >
+                            <option>Amateur</option>
+                            <option>Baja</option>
+                            <option>Media</option>
+                            <option>Alta</option>
+                            <option>Profesional</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+
+                    <!-- radio checks -->
+                    <div class="form-group col-md-12">
+                      <label class="col-md-10 control-label" id="gratuito">Gratuito</label>
+                      <div class="col-md-6">
+                        <div class="radio col-md-2">
+                          <label>
+                            <input type="radio" name="hombre" value="yes" /> Sí
+                          </label>
+                        </div>
+                        <div class="radio col-md-2">
+                          <label>
+                            <input type="radio" name="mujer" value="no" /> No
+                          </label>
+                        </div>
+                      </div>
+                    </div>
+
+                    <!-- upload event picture -->
+                    <div class="col-md-12 text-left">
+                      <div class="uplod-picture">
+                        <span class="btn btn-default uplod-file">
+                          Subir imagen evento<input type="file" />
+                        </span>
+                      </div><!--uplod-picture close-->
+                    </div><!--col-md-12 close-->
+
+                    <!-- Button -->
+                    <div class="form-group col-md-10">
+                      <div class="col-md-6">
+                        <button type="submit" class="btn btn-warning submit-button" >Crear</button>
+                        <button type="submit" class="btn btn-warning submit-button" >Cancelar</button>
+                      </div>
+                    </div>
+                  </fieldset>
+                </form>
+              </div><!--row close-->
+            </div><!--container close -->          
+          </div><!--tab-pane close-->
+
           <div class="tab-pane fade" id="change">
             <div class="container fom-main">
               <div class="row">
@@ -382,10 +514,19 @@
                     </div>
 
                     <div class="form-group col-md-12">
+                      <label class="col-md-10 control-label">Contraseña</label>  
+                      <div class="col-md-12 inputGroupContainer">
+                        <div class="input-group">
+                          <input  name="password" class="form-control"  type="password">
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="form-group col-md-12">
                       <label class="col-md-10 control-label">Nueva Contraseña</label>  
                       <div class="col-md-12 inputGroupContainer">
                         <div class="input-group">
-                          <input  name="first_name" placeholder="Nueva Contraseña" class="form-control"  type="password">
+                          <input  name="newPassword" placeholder="Nueva Contraseña" class="form-control"  type="password">
                         </div>
                       </div>
                     </div>
@@ -394,7 +535,7 @@
                       <label class="col-md-10 control-label">Confirmar Nueva Contraseña</label>  
                       <div class="col-md-12 inputGroupContainer">
                         <div class="input-group">
-                          <input  name="first_name" placeholder="Confirmar Nueva Contraseña" class="form-control"  type="password">
+                          <input  name="confirmPassword" placeholder="Confirmar Nueva Contraseña" class="form-control"  type="password">
                         </div>
                       </div>
                     </div>
