--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -35,12 +35,12 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-12">
-								<form id="login-form" action="muroVacio.html" method="get" role="form" style="display: block;">
+								<form id="login-form" action="/Servidor/usuarios" method="get" role="form" style="display: block;">
 									<div class="form-group">
 										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
 									</div>
 									<div class="form-group">
-										<input type="password" name="contrasena" id=""contrasena"" tabindex="2" class="form-control" placeholder="Password">
+										<input type="password" name="contrasena" id="contrasena" tabindex="2" class="form-control" placeholder="Password">
 									</div>
 									<div class="form-group text-center">
 										<input type="checkbox" tabindex="3" class="" name="remember" id="remember">
@@ -54,18 +54,21 @@
 										</div>
 									</div>
 								</form>
-								<form id="register-form" action="signup.html" method="post" role="form" style="display: none;">
+								<form id="register-form" action="/Servidor/usuarios" method="post" role="form" style="display: none;">
 									<div class="form-group">
-										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username">
 									</div>
 									<div class="form-group">
-										<input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
+										<input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address">
 									</div>
 									<div class="form-group">
 										<input type="password" name="contrasena" id="contrasena" tabindex="2" class="form-control" placeholder="Password">
 									</div>
 									<div class="form-group">
-										<input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
+										<input type="text" name="apellidos" id="apellidos" tabindex="2" class="form-control" placeholder="Apellido">
+									</div>
+									<div class="form-group">
+										<input type="date" name="fecha_nacimiento" id="fecha_nacimiento" tabindex="2" class="form-control" placeholder="Fecha de nacimiento">
 									</div>
 									<div class="form-group">
 										<div class="row">
