--- a/WebContent/muroVacio.html
+++ b/WebContent/muroVacio.html
@@ -27,9 +27,17 @@
   			</div>
   			<div class="navbar-collapse collapse">
   				<ul class="nav navbar-nav navbar-right">
-  					<li class="active"><a href="#">Home</a></li>
-  					<li><a href="#">About</a></li>
-  					<li class="dropdown">
+  					<li class="active"><a href="muroVacio.html">Home</a></li>
+  					<li>
+              <a href="#">About</a>
+            </li>
+            <li>
+              <a href="profile.html">Perfil</a>
+            </li>
+            <li> 
+              <a href="signup.html">Cerrar sesión</a>
+            </li>
+  					<!--<li class="dropdown">
   						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Perfil<b class="caret"></b></a>
   						<ul class="dropdown-menu">
   							<li class="dropdown-header">Perfil de "nombre usuario"</li>
@@ -44,7 +52,7 @@
                 <li class="divider"></li>
                 <li> <a href="signup.html">Cerrar sesión</a></li>
   						</ul>
-  					</li>
+  					</li>-->
   				</ul>
   			</div>
 		</div>
