--- a/WebContent/profile.html
+++ b/WebContent/profile.html
@@ -36,37 +36,11 @@
             <li>
               <a href="#">About</a>
             </li>
-            <li class="dropdown active">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Perfil
-                <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li class="dropdown-header">Perfil de "nombre usuario"</li>
-                <li> 
-                  <a href="profile.html">Mi perfil</a>
-                </li>
-                <li class="divider"></li>
-                <li> 
-                  <a href="#deportes" data-toggle="modal">Mis deportes</a>
-                </li>
-                <li> 
-                  <a href="#eventos" data-toggle="modal">Mis eventos</a>
-                </li>
-                <li> 
-                  <a href="#amigos" data-toggle="modal">Mis amigos</a>
-                </li>
-                <li> 
-                  <a href="#mensajes" data-toggle="modal">Mis mensajes</a>
-                </li>
-                <li class="divider"></li>
-                <li> 
-                  <a href="#">Crear evento</a>
-                </li>
-                <li class="divider"></li>
-                <li> 
-                  <a href="signup.html">Cerrar sesión</a>
-                </li>
-              </ul>
+            <li class="active">
+              <a href="profile.html">Perfil</a>
+            </li>
+            <li> 
+              <a href="signup.html">Cerrar sesión</a>
             </li>
           </ul>
         </div>
