Change Names and delete unnecessary files

--- a/WebContent/muro.html
+++ b/WebContent/muro.html
@@ -9,7 +9,7 @@
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/muroVacio.css">
+	<link rel="stylesheet" href="css/muro.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
   <body>
@@ -27,7 +27,7 @@
   			</div>
   			<div class="navbar-collapse collapse">
   				<ul class="nav navbar-nav navbar-right">
-  					<li class="active"><a href="muroVacio.html">Home</a></li>
+  					<li class="active"><a href="muro.html">Home</a></li>
   					<li>
               <a href="#">About</a>
             </li>
@@ -104,8 +104,6 @@
         <div class="modal-body">
           <!-- abrimos lista deportes -->
 
-
-
           <div class="container" id="containerDeportes">
               <div class="row">
 
@@ -166,10 +164,6 @@
           	</div>
           </div>
 
-
-
-
-
           <!-- cerramos lista deportes -->
         </div>
         <div class="modal-footer">
@@ -179,11 +173,11 @@
     </div>
   </div>
 
-
+<!-- 
 	<div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
 		<div class="container">
 			<div class="navbar-text pull-left">
-				<p> 2014 BootstrapBay.</p>
+				<p> 2016 BootstrapBay.</p>
 			</div>
 			<div class="navbar-text pull-right">
 				<a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
@@ -195,69 +189,7 @@
 		</div>
 	</div>
 
-  <div class="modal fade" id="deportes" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-            <h4> Aun no tienes deportes añadidos </h4>
-        </div>
-        <div class="modal-body">
-          <p> Primero añade deportes para poder visualizarlos </p>
-        </div>
-        <div class="modal-footer">
-          <a class="btn btn-primary" data-dismiss="modal">Close</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade" id="eventos" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-            <h4> Aun no tienes eventos añadidos </h4>
-        </div>
-        <div class="modal-body">
-          <p> Primero añade eventos para poder visualizarlos </p>
-        </div>
-        <div class="modal-footer">
-          <a class="btn btn-primary" data-dismiss="modal">Close</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade" id="amigos" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-            <h4> Aun no tienes amigos añadidos </h4>
-        </div>
-        <div class="modal-body">
-          <p> Primero añade amigos para poder visualizarlos </p>
-        </div>
-        <div class="modal-footer">
-          <a class="btn btn-primary" data-dismiss="modal">Close</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade" id="mensajes" role="dialog">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-            <h4> Aun no tienes mensajes </h4>
-        </div>
-        <div class="modal-body">
-          <p> Primero añade amigos para poder conversar con ellos </p>
-        </div>
-        <div class="modal-footer">
-          <a class="btn btn-primary" data-dismiss="modal">Close</a>
-        </div>
-      </div>
-    </div>
-  </div>
+  -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
