--- a/WebContent/profile.html
+++ b/WebContent/profile.html
@@ -27,12 +27,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="muroVacio.html">Social Sport</a>
+          <a class="navbar-brand" href="muro.html">Social Sport</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <a href="muroVacio.html">Home</a>
+              <a href="muro.html">Home</a>
             </li>
             <li>
               <a href="#">About</a>
@@ -181,7 +181,7 @@
               <div class="col-xs-6 tab-paneEvent">
                 <h2 class="Subtittle">Suscritos</h2>
                   <p>No te has suscrito a ningun evento</p>
-                  <a href="muroVacio.html" class="btn btn-primary">Ver Eventos</a>
+                  <a href="muro.html" class="btn btn-primary">Ver Eventos</a>
               </div><!--column close-->
 
             </div><!--container close --> 
