--- a/WebContent/muro.html
+++ b/WebContent/muro.html
@@ -20,11 +20,8 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
-
- <div>
-      <div id="topBar" />
- </div>
-
+ <div id="topBar" ></div>
+ 
  <div class="container" >
   <div class="jumbotron text-center">
    <h1><font color=white background-color=black> Bienvenido a Social Sport </font></h1>
@@ -73,10 +70,8 @@
         <!-- abrimos lista deportes -->
 
         <div class="container" id="containerDeportes">
-          <div class="row">
-
-            <div id="result" />
-
+          <div class="row">            
+			<div id="result" ></div>
           </div>
         </div>
 
