--- a/WebContent/topBar.html
+++ b/WebContent/topBar.html
@@ -30,11 +30,8 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li>
-              <div class="searhFriend">
-           		 <ul class="navbar-right">
-             		 <li><a data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-search"></span> Buscar Amigos</a></li>
-            	 </ul>
-          	  </div>
+            	<a data-toggle="modal" data-target="#myModal"><span 
+            		class="glyphicon glyphicon-search"></span> Buscar Amigos</a>   
             </li>
             <li>
               <a href="muro.html">Home</a>
