--- a/WebContent/signup.html
+++ b/WebContent/signup.html
@@ -37,7 +37,8 @@
 							<div class="col-lg-12">
 								<form id="login-form" action="/Servidor/usuarios" method="get" role="form" style="display: block;">
 									<div class="form-group">
-										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+										<input  type="email" name="email" id="email" tabindex="1" class="form-control" 
+										placeholder="Email" value="">
 									</div>
 									<div class="form-group">
 										<input type="password" name="contrasena" id="contrasena" tabindex="2" class="form-control" placeholder="Password">
